--- a/src/components/ReadingDetailSection/tabs/KarmiqueTab.css
+++ b/src/components/ReadingDetailSection/tabs/KarmiqueTab.css
@@ -93,11 +93,18 @@
 
 .matrix-icon,
 .matrix-icon-end {
-  font-size: 1.5rem;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   color: #d4af37;
   animation: matrix-sparkle 2s ease-in-out infinite;
   opacity: 0.9;
+}
+
+.matrix-icon svg,
+.matrix-icon-end svg {
+  width: 14px;
+  height: 14px;
 }
 
 .matrix-icon-end {
