--- a/src/components/ReadingDetailSection/tabs/MatrixTab.css
+++ b/src/components/ReadingDetailSection/tabs/MatrixTab.css
@@ -595,7 +595,17 @@
 }
 
 .special-icon {
-  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+}
+
+.special-icon svg {
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease;
 }
 
 .matrix-special-item span {
